Fix color and spacing of gallery captions [WEB-1251]

--- a/frontend/scss/organisms/_o-gallery.scss
+++ b/frontend/scss/organisms/_o-gallery.scss
@@ -42,24 +42,28 @@
 }
 
 .o-gallery__title,
-.o-gallery figcaption strong,
-.o-gallery .m-media figcaption strong.f-caption {
+.o-gallery figcaption,
+.o-gallery .m-media figcaption .f-caption-title {
   color: $color__text--title-contrast;
 }
 
-.o-gallery .m-media figcaption strong a {
+.o-gallery .m-media figcaption a {
   color: $color__text--title-contrast;
 }
 
-.o-gallery .m-media figcaption strong a:hover,
-.o-gallery .m-media a.m-media__img:hover + figcaption strong a {
+.o-gallery .m-media figcaption a:hover,
+.o-gallery .m-media a.m-media__img:hover + figcaption a {
   @include text-underline(1.05em, $color__text--title-contrast, $color__bg--gallery);
 }
 
-.o-gallery .m-media figcaption strong a:active {
+.o-gallery .m-media figcaption a:active {
   background-image: none;
   color: $color__text--title-contrast;
   text-shadow: 0;
+}
+
+.o-gallery .m-media figcaption .f-caption p {
+  margin-bottom: 12px;
 }
 
 .o-gallery hr,
@@ -580,20 +584,20 @@
 
   .o-gallery__title,
   figcaption strong,
-  .m-media figcaption strong.f-caption {
+  .m-media figcaption .f-caption-title {
     color: $color__text--title;
   }
 
-  .m-media figcaption strong a {
+  .m-media figcaption a {
     color: $color__text--title;
   }
 
-  .m-media figcaption strong a:hover,
-  .m-media a.m-media__img:hover + figcaption strong a {
+  .m-media figcaption a:hover,
+  .m-media a.m-media__img:hover + figcaption a {
     @include text-underline(1.05em, $color__text--title, $color__bg--primary);
   }
 
-  .m-media figcaption strong a:active {
+  .m-media figcaption a:active {
     background-image: none;
     color: $color__text--title;
     text-shadow: 0;
